--- a/index.html
+++ b/index.html
@@ -112,7 +112,8 @@
         .carousel-slide img {
             width: 100%;
             height: 100%;
-            object-fit: cover;
+            object-fit: contain;  /* ПРОМЕНИ ОТ cover НА contain */
+            object-position: center;
         }
         
         /* Right side - Information */
