--- a/index.html
+++ b/index.html
@@ -111,9 +111,9 @@
         }
         .carousel-slide img {
             width: 100%;
-            height: 100%;
-            object-fit: contain;  /* ПРОМЕНИ ОТ cover НА contain */
-            object-position: center;
+            height: 105%;
+            object-fit: cover;
+            object-position: center top;
         }
         
         /* Right side - Information */
