--- a/index.html
+++ b/index.html
@@ -112,8 +112,8 @@
         .carousel-slide img {
             width: 100%;
             height: 100%;
-            object-fit: cover;
-            object-position: center top;
+            object-fit: contain;
+            object-position: center center;
         }
         
         /* Right side - Information */
