--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             width: 100%;
             height: 100%;
             background: white;
-            border-radius: 28px;
+            border-radius: 30px;
             overflow: hidden;
             position: relative;
         }
@@ -113,7 +113,7 @@
             width: 100%;
             height: 100%;
             object-fit: contain;
-            object-position: center center;
+            object-position: center;
         }
         
         /* Right side - Information */
