--- a/index.html
+++ b/index.html
@@ -93,6 +93,8 @@
             border-radius: 30px;
             overflow: hidden;
             position: relative;
+            display: flex;
+            align-items: flex-start; 
         }
         .carousel {
             width: 100%;
