--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             height: 600px;
             background: #1a1a1a;
             border-radius: 40px;
-            padding: 50px;
+            padding: 40px;
             box-shadow: 0 30px 60px rgba(0,0,0,0.3);
         }
         /*.phone-notch {
@@ -98,6 +98,7 @@
             width: 100%;
             height: 100%;
             position: relative;
+            margin-top: -40px;
         }
         .carousel-slide {
             position: absolute;
