--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
             max-width: 1200px;
             margin: 0 auto;
             display: flex;
-            gap: 0;
-            align-items: flex-start;
+            gap: 30px;
+            align-items: center;
             flex-wrap: wrap;
         }
         
