--- a/index.html
+++ b/index.html
@@ -23,13 +23,11 @@
             flex-wrap: wrap;
         }
         
-        /* Left side - Phone carousel */
         .phone-section {
             flex: 1;
             min-width: 300px;
             display: flex;
-            flex-direction: column;
-            align-items: center;
+            justify-content: center;
             gap: 20px;
         }
         
