--- a/index.html
+++ b/index.html
@@ -70,18 +70,8 @@
             padding: 40px;
             box-shadow: 0 30px 60px rgba(0,0,0,0.3);
         }
-        /*.phone-notch {
-            position: absolute;
-            top: 10px;
-            left: 50%;
-            transform: translateX(-50%);
-            width: 120px;
-            height: 25px;
-            background: #1a1a1a;
-            border-radius: 0 0 15px 15px;
-            z-index: 10; */
             
-        }.phone-notch {
+        .phone-notch {
             display: none;
         }
         .phone-screen {
@@ -96,7 +86,7 @@
             width: 100%;
             height: 100%;
             position: relative;
-            margin-top: -40px;
+            
         }
         .carousel-slide {
             position: absolute;
