--- a/index.html
+++ b/index.html
@@ -339,37 +339,38 @@
                     Choose your language and download ready-made file:
                 </p>
                 <div class="json-links">
-                    <a href="verses/en.json" class="json-link" download>
-                        🇬🇧 English
-                    </a>
-                    <a href="verses/bg.json" class="json-link" download>
-                        🇧🇬 <span data-en="Bulgarian" data-bg="Български">Bulgarian</span>
-                    </a>
-                    <a href="verses/ru.json" class="json-link" download>
-                        🇷🇺 <span data-en="Russian" data-bg="Руски">Russian</span>
-                    </a>
-                    <a href="verses/ro.json" class="json-link" download>
-                        🇷🇴 Romanian
-                    </a>
-                    <a href="verses/es.json" class="json-link" download>
-                        🇪🇸 <span data-en="Spanish" data-bg="Испански">Spanish</span>
-                    </a>
-                    <a href="verses/de.json" class="json-link" download>
-                        🇩🇪 <span data-en="German" data-bg="Немски">German</span>
-                    </a>
-                    <a href="verses/it.json" class="json-link" download>
-                        🇮🇹 <span data-en="Italian" data-bg="Италиански">Italian</span>
-                    </a>
-                    <a href="verses/pl.json" class="json-link" download>
-                        🇵🇱 <span data-en="Polish" data-bg="Полски">Polish</span>
-                    </a>
-                    <a href="verses/uk.json" class="json-link" download>
-                        🇺🇦 <span data-en="Ukrainian" data-bg="Украински">Ukrainian</span>
-                    </a>
-                    <a href="verses/cs.json" class="json-link" download>
-                        🇨🇿 <span data-en="Czech" data-bg="Чешки">Czech</span>
-                    </a>
-                </div>
+    <a href="verses/en.json" class="json-link" download>
+        <span>🇬🇧</span> English
+    </a>
+    <a href="verses/bg.json" class="json-link" download>
+        <span>🇧🇬</span> <span data-en="Bulgarian" data-bg="Български">Bulgarian</span>
+    </a>
+    <a href="verses/ru.json" class="json-link" download>
+        <span>🇷🇺</span> <span data-en="Russian" data-bg="Руски">Russian</span>
+    </a>
+    <a href="verses/ro.json" class="json-link" download>
+        <span>🇷🇴</span> Romanian
+    </a>
+    <a href="verses/es.json" class="json-link" download>
+        <span>🇪🇸</span> <span data-en="Spanish" data-bg="Испански">Spanish</span>
+    </a>
+    <a href="verses/de.json" class="json-link" download>
+        <span>🇩🇪</span> <span data-en="German" data-bg="Немски">German</span>
+    </a>
+    <a href="verses/it.json" class="json-link" download>
+        <span>🇮🇹</span> <span data-en="Italian" data-bg="Италиански">Italian</span>
+    </a>
+    <a href="verses/pl.json" class="json-link" download>
+        <span>🇵🇱</span> <span data-en="Polish" data-bg="Полски">Polish</span>
+    </a>
+    <a href="verses/uk.json" class="json-link" download>
+        <span>🇺🇦</span> <span data-en="Ukrainian" data-bg="Украински">Ukrainian</span>
+    </a>
+    <a href="verses/cs.json" class="json-link" download>
+        <span>🇨🇿</span> <span data-en="Czech" data-bg="Чешки">Czech</span>
+    </a>
+</div>
+
             </div>
         </div>
     </div>
