--- a/index.html
+++ b/index.html
@@ -225,6 +225,37 @@
             color: white;
             font-size: 0.85em;
         }
+
+        .json-link {
+    display: flex;
+    align-items: center;
+    gap: 8px;
+    background: #e3f2fd;
+    color: #1976d2;
+    padding: 10px 14px;
+    text-decoration: none;
+    border-radius: 10px;
+    font-size: 0.9em;
+    transition: all 0.2s;
+}
+.json-link:hover {
+    background: #bbdefb;
+    transform: translateX(3px);
+}
+.lang-code {
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    min-width: 32px;
+    height: 24px;
+    background: #1976d2;
+    color: white;
+    font-weight: bold;
+    font-size: 0.75em;
+    border-radius: 4px;
+    padding: 0 6px;
+}
+
         
         /* Responsive */
         @media (max-width: 768px) {
@@ -340,36 +371,37 @@
                 </p>
                 <div class="json-links">
     <a href="verses/en.json" class="json-link" download>
-        <span>🇬🇧</span> English
+        <span class="lang-code">GB</span> English
     </a>
     <a href="verses/bg.json" class="json-link" download>
-        <span>🇧🇬</span> <span data-en="Bulgarian" data-bg="Български">Bulgarian</span>
+        <span class="lang-code">BG</span> <span data-en="Bulgarian" data-bg="Български">Bulgarian</span>
     </a>
     <a href="verses/ru.json" class="json-link" download>
-        <span>🇷🇺</span> <span data-en="Russian" data-bg="Руски">Russian</span>
+        <span class="lang-code">RU</span> <span data-en="Russian" data-bg="Руски">Russian</span>
     </a>
     <a href="verses/ro.json" class="json-link" download>
-        <span>🇷🇴</span> Romanian
+        <span class="lang-code">RO</span> Romanian
     </a>
     <a href="verses/es.json" class="json-link" download>
-        <span>🇪🇸</span> <span data-en="Spanish" data-bg="Испански">Spanish</span>
+        <span class="lang-code">ES</span> <span data-en="Spanish" data-bg="Испански">Spanish</span>
     </a>
     <a href="verses/de.json" class="json-link" download>
-        <span>🇩🇪</span> <span data-en="German" data-bg="Немски">German</span>
+        <span class="lang-code">DE</span> <span data-en="German" data-bg="Немски">German</span>
     </a>
     <a href="verses/it.json" class="json-link" download>
-        <span>🇮🇹</span> <span data-en="Italian" data-bg="Италиански">Italian</span>
+        <span class="lang-code">IT</span> <span data-en="Italian" data-bg="Италиански">Italian</span>
     </a>
     <a href="verses/pl.json" class="json-link" download>
-        <span>🇵🇱</span> <span data-en="Polish" data-bg="Полски">Polish</span>
+        <span class="lang-code">PL</span> <span data-en="Polish" data-bg="Полски">Polish</span>
     </a>
     <a href="verses/uk.json" class="json-link" download>
-        <span>🇺🇦</span> <span data-en="Ukrainian" data-bg="Украински">Ukrainian</span>
+        <span class="lang-code">UA</span> <span data-en="Ukrainian" data-bg="Украински">Ukrainian</span>
     </a>
     <a href="verses/cs.json" class="json-link" download>
-        <span>🇨🇿</span> <span data-en="Czech" data-bg="Чешки">Czech</span>
+        <span class="lang-code">CZ</span> <span data-en="Czech" data-bg="Чешки">Czech</span>
     </a>
 </div>
+
 
             </div>
         </div>
