--- a/index.html
+++ b/index.html
@@ -371,36 +371,37 @@
                 </p>
                 <div class="json-links">
     <a href="verses/en.json" class="json-link" download>
-        <span class="lang-code">GB</span> English
+        🇬🇧 English
     </a>
     <a href="verses/bg.json" class="json-link" download>
-        <span class="lang-code">BG</span> <span data-en="Bulgarian" data-bg="Български">Bulgarian</span>
+        🇧🇬 <span data-en="Bulgarian" data-bg="Български">Bulgarian</span>
     </a>
     <a href="verses/ru.json" class="json-link" download>
-        <span class="lang-code">RU</span> <span data-en="Russian" data-bg="Руски">Russian</span>
+        🇷🇺 <span data-en="Russian" data-bg="Руски">Russian</span>
     </a>
     <a href="verses/ro.json" class="json-link" download>
-        <span class="lang-code">RO</span> Romanian
+        🇷🇴 Romanian
     </a>
     <a href="verses/es.json" class="json-link" download>
-        <span class="lang-code">ES</span> <span data-en="Spanish" data-bg="Испански">Spanish</span>
+        🇪🇸 <span data-en="Spanish" data-bg="Испански">Spanish</span>
     </a>
     <a href="verses/de.json" class="json-link" download>
-        <span class="lang-code">DE</span> <span data-en="German" data-bg="Немски">German</span>
+        🇩🇪 <span data-en="German" data-bg="Немски">German</span>
     </a>
     <a href="verses/it.json" class="json-link" download>
-        <span class="lang-code">IT</span> <span data-en="Italian" data-bg="Италиански">Italian</span>
+        🇮🇹 <span data-en="Italian" data-bg="Италиански">Italian</span>
     </a>
     <a href="verses/pl.json" class="json-link" download>
-        <span class="lang-code">PL</span> <span data-en="Polish" data-bg="Полски">Polish</span>
+        🇵🇱 <span data-en="Polish" data-bg="Полски">Polish</span>
     </a>
     <a href="verses/uk.json" class="json-link" download>
-        <span class="lang-code">UA</span> <span data-en="Ukrainian" data-bg="Украински">Ukrainian</span>
+        🇺🇦 <span data-en="Ukrainian" data-bg="Украински">Ukrainian</span>
     </a>
     <a href="verses/cs.json" class="json-link" download>
-        <span class="lang-code">CZ</span> <span data-en="Czech" data-bg="Чешки">Czech</span>
+        🇨🇿 <span data-en="Czech" data-bg="Чешки">Czech</span>
     </a>
 </div>
+
 
 
             </div>
