--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
             flex-direction: column;
             align-items: center;
             gap: 50px;
+            margin-top: 20px;
             margin-bottom: 30px;
         }
         
